@@ -67,6 +67,12 @@ Open Vehicle Monitor System v3 - Change log
    Adds various browser javascript functions and methods for plugins related
      to displaying user configurations Auto-converts metric display to user
      units in plugins that use attributes
+- Cellular: add GPS/GNSS state control commands (for power management)
+  New commands:
+    cellular gps [status]             -- output current modem GPS/GNSS subsystem status
+    cellular gps start                -- start modem GPS/GNSS subsystem
+    cellular gps stop                 -- stop modem GPS/GNSS subsystem
+
 
 2022-09-01 MWJ  3.3.003  OTA release
 - Toyota RAV4 EV: Initial support added. Only the Tesla bus is decoded and just listening so far.
